2005-02-03  Lars Clausen  <lars@raeder.dk>

	* lib/.cvsignore: Added generated files diamarshal.[ch]

2005-02-02  Lars Clausen  <lars@raeder.dk>

	* configure.in: Add GLIB_GENMARSHAL def as suggested in
	http://ignore-your.tv/software/libgtcpsocket/docs/client-subclassing.html.
	Now compiles on Linux.

2005-02-01  Lars Clausen  <lars@raeder.dk>

	* app/sheets.c (sheet_object_mod_get_type_string): We don't really
	need to translate the empty string.  Especially not after
	g_assert_not_reached().  Fixes bug #165966.

2005-01-07  Tim Olsen  <tolsen@alum.mit.edu>

	* objects/UML/activity.c : add fill- and line-colour properties
	[applied by Hans Breuer, fixes bug #163260]

2004-01-28  Hans Breuer  <hans@breuer.org>

	* doc/en/*.xml doc/en/dia.dbk app/authors.h : documentation
	update provided by Alan Horkan (fixes bug #159592)

2004-01-28  Hans Breuer  <hans@breuer.org>

	[Extented version for UML to C++ conversion by Dave Klotzbach, bug #155255]
	* plug-ins/xslt/dia-uml2cpp.xsl : (new file) ... handles associataions,
	generalization, dependancies, parameterized classes ...
	* plug-ins/xslt/styleshetts.xml : refernce it
	* plug-ins/xslt/dia-uml.xsl : handle more UML types uesd above

2004-01-28  Hans Breuer  <hans@breuer.org>

	* objects/UML/transition.c : fill out the extra_spacing struct 
	in the OrtConn member, in order to avoid artifacts when draggin 
	the transition. (patch by Peter Allin, bug #144956)

2004-01-15  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : initialized the renderers default dash_length
	to something differnt than 0. Apparently there are case where Dia misses
	to appropriately set it before requesting a dashed line (simple line with
	arrow as described in bug #151716)

	* lib/dia_dirs.c : special casing for drive letters which I broke with
	the previous change

2005-01-13  Hans Breuer  <hans@breuer.org>

	* app/interface.c(create_sheet_page) : remved dead long time code
