@@ -359,6 +359,9 @@ modify_motion(ModifyTool *tool, GdkEventMotion *event,
   gboolean auto_scroll, vertical = FALSE;
   ConnectionPoint *connectionpoint;
   ObjectChange *objchange;
+  gchar *postext;
+  GtkStatusbar *statusbar;
+  guint context_id;
 
   if (tool->state==STATE_NONE)
     return; /* Fast path... */
@@ -420,7 +423,24 @@ modify_motion(ModifyTool *tool, GdkEventMotion *event,
       undo_object_change(ddisp->diagram, tool->object, objchange);
     }
     object_add_updates_list(ddisp->diagram->data->selected, ddisp->diagram);
-  
+
+    object_add_updates(tool->object, ddisp->diagram);
+
+    /* Put current mouse position in status bar */
+    statusbar = GTK_STATUSBAR (ddisp->modified_status);
+    context_id = gtk_statusbar_get_context_id (statusbar, "ObjectPos");
+    
+    postext = g_strdup_printf("%.3f, %.3f - %.3f, %.3f",
+			      tool->object->bounding_box.left,
+			      tool->object->bounding_box.top,
+			      tool->object->bounding_box.right,
+			      tool->object->bounding_box.bottom);
+			       
+    gtk_statusbar_pop (statusbar, context_id); 
+    gtk_statusbar_push (statusbar, context_id, postext);
+
+    g_free(postext);
+
     diagram_update_connections_selection(ddisp->diagram);
     diagram_flush(ddisp->diagram);
     break;
@@ -480,7 +500,20 @@ modify_motion(ModifyTool *tool, GdkEventMotion *event,
       *tool->orig_pos = tool->handle->pos;
     }
 
+    /* Put current mouse position in status bar */
+    statusbar = GTK_STATUSBAR (ddisp->modified_status);
+    context_id = gtk_statusbar_get_context_id (statusbar, "CursorPos");
+    
+    postext = g_strdup_printf("%.3f, %.3f", to.x, to.y);
+			       
+    gtk_statusbar_pop (statusbar, context_id); 
+    gtk_statusbar_push (statusbar, context_id, postext);
+
+    g_free(postext);
+
     object_add_updates(tool->object, ddisp->diagram);
+
+    /* Handle undo */
     objchange = tool->object->ops->move_handle(tool->object, tool->handle, 
 					       &to, connectionpoint,
 					       HANDLE_MOVE_USER, 0);
