@@ -1,3 +1,12 @@
+2005-02-06  Lars Clausen  <lars@raeder.dk>
+
+	* app/display.c (ddisplay_set_origo): Use more standard
+	transformations.
+
+	* app/modify_tool.c (modify_motion): 
+	* app/create_object.c (create_object_motion): Put coordinates of
+	handle/object in status bar while moving.
+
 2005-02-03  Lars Clausen  <lars@raeder.dk>
 
 	* lib/.cvsignore: Added generated files diamarshal.[ch]
